# particles

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  classes.cpp  classes.h  main.cpp
src/: classes.cpp  classes.h  main.cpp
